@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: ipmipower.8.in,v 1.8 2005-03-18 22:06:55 chu11 Exp $
+\."$Id: ipmipower.8.in,v 1.9 2005-09-27 01:48:52 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2003 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -418,6 +418,7 @@ Hard reset nodes foo[0-2] with non-null username and password
 .LP
 Hard reset the nodes configured in a configuration file
         ipmipower -C /etc/powerctrl.conf --reset
+
 .SH "USE WITH POWERMAN"
 The 
 .B powerman
@@ -439,6 +440,25 @@ It is recommend that the --on-if-off option be used with
 when it is used in conjunction with powerman.  This will ensure
 .B ipmipower
 behaves similarly to other powerman devices.
+
+.SH "CLUSTER FOCUS"
+.B Ipmipower 
+has been developed to be especially useful for power controlling
+clusters; however, it may still be used to power control just one
+machine at a time.
+
+When used on a cluster,
+.B ipmipower 
+is programmed so that the time it takes to power control the cluster
+is the time it takes to power control the slowest node.  This is
+accomplished by parallelizing the establishment of IPMI sessions and
+the transmission of the actual power control command.  Remote machine
+discovery is also implemented so that time is not wasted trying to
+power control machines taken out of the cluster for servicing. When
+used in conjunction with powerman,
+.B ipmipower 
+has been used to consistently power control a 1024-node cluster in
+under 0.5 s.
 
 .SH "TROUBLESHOOTING"
 Most often, problems with ipmipower involve a misconfiguration of the
