@@ -1,3 +1,8 @@
+2005-09-26  Albert Chu <chu11@llnl.gov>
+
+	* ipmipower/ipmipower.8.in: Added note about ipmipower's cluster
+	focus because it keeps on coming up in conversations.
+	
 2005-09-11  A Balamurugan  <bala@zresearch.com>
 
 	* doc/version.texi: Updated.
